BeBetterMe功能在新增和修改每日报告页面添加了彩色icon显示

--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>vue-elementui-tobuyns</title>
-    <link rel="icon" href="./src/assets/img/titlelogo.ico"/>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/dist/build.js"></script>
-  </body>
+
+	<head>
+		<meta charset="utf-8">
+		<title>vue-elementui-tobuyns</title>
+		<!--设置网页图标-->
+		<link rel="icon" href="./src/assets/img/titlelogo.ico" />
+		
+		<!--在线引入纯色icon-->
+		<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_639872_1aqxl8sfpqskbj4i.css"/>
+		<!--在线引入彩色icon(test)-->
+		<!--<script type="text/javascript" src="//at.alicdn.com/t/font_640196_orymxikgdhzadcxr.js" ></script>-->
+		<!--在线引入彩色icon2(bebetter)-->
+		<script type="text/javascript" src="//at.alicdn.com/t/font_640296_khwr9z16ep6tj4i.js" ></script>
+		<style type="text/css">
+			.icon {
+				width: 1.5em;
+				height: 1.5em;
+				vertical-align: -0.15em;
+				fill: currentColor;
+				overflow: hidden;
+			}
+		</style>
+	</head>
+
+	<body>
+		<div id="app"></div>
+		<script src="/dist/build.js"></script>
+	</body>
+
 </html>
